--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cmdk": "^1.1.1",
     "immer": "^10.1.3",
     "lucide-react": "^0.544.0",
+    "mitt": "^3.0.1",
     "next-themes": "^0.4.6",
     "notistack": "^3.0.2",
     "react": "^19.1.1",
